--- a/FormFiller/popup.html
+++ b/FormFiller/popup.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<button id="getFormAnswers">Get form answer</button>
-		<button id="fillForm">Fill form from local storage</button>
+		<button id="fillForm" disabled>Fill form from local storage</button>
 		<hr>
 		<div>
 			<p id="savedForm"></p>
